--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.4",
     "react": "17.0.2",
-    "react-native": "0.65.1",
+    "react-native": "^0.66.0",
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
@@ -31,7 +31,7 @@
     "eslint": "^7.32.0",
     "jest": "^27.2.1",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-native-codegen": "^0.0.7",
+    "react-native-codegen": "^0.0.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
