--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
+    "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "realm": "^10.9.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
